@@ -1,4 +1,12 @@
 Next:
+  - INT 21h: If a DOS program frees a memory block, and then resizes the
+    freed memory block, reassign ownership of that block to the program
+    as if allocated. This is apparently canonical MS-DOS behavior. Added
+    dosbox.conf option to control whether resizing a freed block silently
+    assigns ownership (default setting) or whether it returns an error.
+    DOS resize memory function for the most part DID assign ownership but
+    not in the case where the size of the MCB was exactly the size requested
+    to resize to. (joncampbell123).
   - Sound Blaster: Fix bug where "force autoinit" prevented Sound Blaster
     playback from working at all, fix for "Jump" by Public NMI (joncampbell123).
   - Debugger UI now shows PIC_FullIndex() and whether or not the CPU is
